# parflux

./: .gitignore  LICENSE  README.md  prek.toml  pyproject.toml  test.py
.github/workflows/: prek.yml  release.yml  tests.yml
parflux/: __main__.py  cli.py  core.py  session.py  types.py
src/parflux/: cli.py  core.py  session.py
tests/: conftest.py
tests/integration/: conftest.py  test_roundtrip.py
tests/unit/: test_cli.py  test_core_download.py  test_core_queries.py  test_csv_loading.py  test_download.py  test_helpers.py  test_session.py
