[tool.poetry]
name = "parflux"
version = "0.1.0"
description = ""
authors = ["Lasse Fröhner <lasse@starcopter.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "parflux"}]

[tool.poetry.dependencies]
python = "^3.10"
influxdb-client = "^1.36.1"
typer = {extras = ["all"], version = "^0.9.0"}
duckdb = "^0.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
parflux = "parflux:cli.app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
extend_skip = ["__init__.py", "pyric/_dsdl"]

[tool.pylint.format]
max-line-length = "120"
