[project]
name = "parflux"
version = "0.1.0"
description = "Efficient InfluxDB data downloader and exporter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.0",
    "influxdb-client>=1.36.1",
    "psutil>=5.9.5",
    "python-dotenv>=1.0.0",
    "python-slugify>=8.0.1",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
parflux = "parflux.__main__:main"

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "ruff>=0.11.0",
    "ty>=0.0.2",
    "typos>=1.45.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"
