[project]
name = "parflux"
version = "0.1.0"
description = "Efficient InfluxDB data downloader and exporter"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lasse Fröhner", email = "lasse@starcopter.com" },
]
keywords = [
    "influxdb",
    "parquet",
    "cli",
    "export",
    "data-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "duckdb>=1.4; python_version < '3.14'",
    "duckdb>=1.5; python_version >= '3.14'",
    "influxdb-client>=1.36.1",
    "python-dotenv>=1.0.0",
    "python-slugify>=8.0.1",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Finwood/parflux"
Repository = "https://github.com/Finwood/parflux"
Issues = "https://github.com/Finwood/parflux/issues"
Changelog = "https://github.com/Finwood/parflux/releases"

[project.scripts]
parflux = "parflux.cli:app"

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "ruff>=0.11.0",
    "ty>=0.0.2",
    "typos>=1.45.1",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=parflux",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: requires a live InfluxDB instance (opt-in via PARFLUX_RUN_INTEGRATION=1)",
]

[tool.coverage.run]
branch = true
source = ["parflux"]
omit = [
    "src/parflux/__main__.py",  # handled by smoke test
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.src]
exclude = ["tests"]
